[gd_scene load_steps=18 format=3 uid="uid://hanjvknsffsn"]

[ext_resource type="Script" path="res://assets/scripts/components/project/project.gd" id="1_qrneh"]
[ext_resource type="Texture2D" uid="uid://dyd3sb041guj7" path="res://icon.svg" id="2_m00bx"]
[ext_resource type="FontFile" uid="uid://4a7ofbj2m6ny" path="res://assets/theme/fonts/droid-sans.bold.ttf" id="2_olu26"]
[ext_resource type="Texture2D" uid="uid://dmvhhoeadp68c" path="res://assets/icons/icon_play.svg" id="3_y40ql"]
[ext_resource type="Script" path="res://assets/scripts/ui/elements/passthrough_label.gd" id="4_3x4ht"]
[ext_resource type="Texture2D" uid="uid://dfjfg3urciamj" path="res://assets/icons/icon_edit.svg" id="4_i07bh"]
[ext_resource type="Texture2D" uid="uid://dt7l8xwranyfe" path="res://assets/icons/icon_heart.svg" id="5_glp54"]
[ext_resource type="Texture2D" uid="uid://b4u64ob2rivlo" path="res://assets/icons/icon_ft_folder.svg" id="5_op8ke"]
[ext_resource type="Texture2D" uid="uid://o2ykjo8ca67j" path="res://assets/icons/godot.svg" id="6_47g68"]
[ext_resource type="Texture2D" uid="uid://bf5krva5rxd1t" path="res://assets/icons/add_category.svg" id="6_g7fgt"]
[ext_resource type="Texture2D" uid="uid://dobhkrjxf4y83" path="res://assets/icons/icon_ft_gdscript.svg" id="6_hu7j0"]
[ext_resource type="Texture2D" uid="uid://c2xbkbwbsmsou" path="res://assets/icons/rem_category.svg" id="7_hn4pb"]
[ext_resource type="Texture2D" uid="uid://daw83uwtd0e81" path="res://assets/icons/submenu.svg" id="9_7e2h5"]
[ext_resource type="Texture2D" uid="uid://dve6nltqywobb" path="res://assets/icons/icon_remove.svg" id="10_10jt3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxpsv"]
bg_color = Color(0.411765, 0.611765, 0.909804, 0.392157)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jwesv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lyymi"]

[node name="Project" type="PanelContainer"]
script = ExtResource("1_qrneh")

[node name="GroupsButton" type="MenuButton" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
button_mask = 0
flat = false
icon_alignment = 1

[node name="ProjectButton" type="Button" parent="."]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_mxpsv")

[node name="ProjectContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="ProjectContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("2_m00bx")
expand_mode = 1

[node name="Info" type="VBoxContainer" parent="ProjectContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="Title" type="Label" parent="ProjectContainer/Info"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_olu26")
text = "New Project"

[node name="Description" type="Label" parent="ProjectContainer/Info" node_paths=PackedStringArray("target_button")]
layout_mode = 2
mouse_filter = 1
text = "No Description"
text_overrun_behavior = 3
max_lines_visible = 1
script = ExtResource("4_3x4ht")
target_button = NodePath("../../../ProjectButton")

[node name="PathContainer" type="HBoxContainer" parent="ProjectContainer/Info"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ProjectContainer/Info/PathContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_op8ke")

[node name="Path" type="Label" parent="ProjectContainer/Info/PathContainer" node_paths=PackedStringArray("target_button")]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "No File Path"
text_overrun_behavior = 3
script = ExtResource("4_3x4ht")
target_button = NodePath("../../../../ProjectButton")

[node name="VSeparator" type="VSeparator" parent="ProjectContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_jwesv")

[node name="TypeTexture" type="TextureRect" parent="ProjectContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_hu7j0")

[node name="Version" type="Label" parent="ProjectContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Unknown Version"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EngineContainer" type="HBoxContainer" parent="ProjectContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="ProjectContainer/EngineContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_47g68")
expand_mode = 1

[node name="EngineVersion" type="Label" parent="ProjectContainer/EngineContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Unknown Engine Version"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="ProjectContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 128
theme_override_styles/separator = SubResource("StyleBoxEmpty_jwesv")

[node name="ButtonContainer" type="HBoxContainer" parent="ProjectContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 32
alignment = 1

[node name="FavoriteButton" type="Button" parent="ProjectContainer/ButtonContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Add / Remove Favorites"
theme_override_colors/icon_pressed_color = Color(1, 0.403922, 0.368627, 1)
toggle_mode = true
icon = ExtResource("5_glp54")
icon_alignment = 1
expand_icon = true

[node name="DeleteButton" type="Button" parent="ProjectContainer/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Remove Project"
theme_override_colors/icon_pressed_color = Color(1, 0.403922, 0.368627, 1)
icon = ExtResource("10_10jt3")
icon_alignment = 1
expand_icon = true

[node name="MenuButton" type="MenuButton" parent="ProjectContainer/ButtonContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
tooltip_text = "Options"
icon = ExtResource("9_7e2h5")
flat = false
icon_alignment = 1
item_count = 6
popup/item_0/icon = ExtResource("4_i07bh")
popup/item_1/icon = ExtResource("3_y40ql")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("6_g7fgt")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("7_hn4pb")
popup/item_3/id = 3
popup/item_4/icon = ExtResource("6_47g68")
popup/item_4/id = 4
popup/item_5/icon = ExtResource("10_10jt3")
popup/item_5/id = 5

[node name="VSeparator3" type="VSeparator" parent="ProjectContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/separator = SubResource("StyleBoxEmpty_lyymi")

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="EditPanel" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="Box" type="HBoxContainer" parent="EditPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="EditPanel/Box"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Set Engine Version: "
horizontal_alignment = 2

[node name="LineEdit" type="LineEdit" parent="EditPanel/Box"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "3.X"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="ConfirmButton" type="Button" parent="EditPanel/Box"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Confirm"

[connection signal="pressed" from="ProjectButton" to="." method="_on_project_button_pressed"]
[connection signal="toggled" from="ProjectContainer/ButtonContainer/FavoriteButton" to="." method="_on_favorite_button_toggled"]
[connection signal="pressed" from="ProjectContainer/ButtonContainer/DeleteButton" to="." method="_on_delete" binds= ["Remove"]]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="text_changed" from="EditPanel/Box/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="EditPanel/Box/ConfirmButton" to="." method="_on_confirm_button_pressed"]
